src/search/entrance-page.css
.entrance-page {
    background-color: white;
    height:60vh;
    width: 100%;
}

.entrance-page > div {
    display: inline-block;
}

.entrance-box-container {
    display: inline-block;
    width: 33%;
    min-width: 300px;
    margin: 0 20px 0 20px;
    padding: 10px;
}

.in-building {
    background-color: white;
    height:10vh;
    width: 96%;
    position: relative;
    top: 20vh;
}

.in-building-box {
    /*box-shadow: 0 0 10px 5px #cdcdcd;*/
    height: 10vh;
    width: 95%;
    margin-left: 4.5%;
    display: inline-block;
    vertical-align: middle;
    text-align: center;
}

.in-building-box .in-building-box-title {
    position: relative;
    width: 40%;
    height: 10vh;
    display: flex;
    align-items: center;
    padding-left: 5%;
    font-family: 'CenturyGothic', serif;
    font-size: 20px;
    float: left;
}

.in-building-box .in-building-box-search {
    position: relative;
    width: 50%;
    text-align: center;
    padding-top: 3vh;
    float: left;
}

